# StrategrDesktop

./: .clang-format  .gitignore  CMakeLists.txt  Dependencies.cmake  InstallDeps.cmake  LICENSE  README.md  Strategr.pro  Strategr.pro.user.4.8-pre1  abstractspinboxdecorator.h  activitieslistitem.cpp  activitieslistitem.h  activitieslistwidget.cpp  activitieslistwidget.h  activity.cpp  activity.h  activityeditor.cpp  activityeditor.h  activitygroup.cpp  activitygroup.h  activitygroupwidget.cpp  activitygroupwidget.h  animatablelayout.cpp  animatablelayout.h  colorpicker.cpp  colorpicker.h  colorpickeritem.cpp  colorutils.h  currentactivitywidget.cpp  currentactivitywidget.h  currenttimemarker.cpp  filesystemiomanager.cpp  filesystemiomanager.h  groupslist.cpp  groupslist.h  jsonserializer.cpp  jsonserializer.h  main.cpp  mainwindow.cpp  mainwindow.h  (+30 more)
core/: CMakeLists.txt  CMakePresets.json  action.hpp  actioncenter.cpp  actioncenter.h  activity.cpp  activity.h  activityinvalidpropertyexception.h  activitylist.cpp  activitylist.h  color.cpp  color.h  color.mm  currenttimemarker.cpp  currenttimemarker.h  dragoperation.cpp  dragoperation.h  event.cpp  event.h  file_bookmark.cpp  file_bookmark.h  geometry.h  json.cpp  json.h  mousehandler.cpp  mousehandler.h  mousehandleroperations.h  notifiableonchange.h  notifications.cpp  notifications.h  notifier.cpp  notifier.h  overview.cpp  overview.h  persistent.cpp  persistent.h  resizeoperation.cpp  resizeoperation.h  selection.cpp  selection.h  (+24 more)
core/apple/: SGCalendarExportViewModel.h  SGCalendarExportViewModel.m  SGCalendarExporter.h  SGCalendarExporter.mm  SGCalendarManager.m  STGCalendarExportViewModel.h  STGCalendarExporter.h  STGCalendarExporter.mm  STGCalendarImportViewModel.h  STGCalendarImportViewModel.m  STGCalendarImporter.h  STGCalendarImporter.mm  STGCalendarManager.h  STGCalendarManager.m  color.mm  file_bookmark.mm
core/cmake/modules/: Findutf8proc.cmake  GetVersionFromGit.cmake  GitRepo.cmake  GitVersion.cmake  StrategrCoreConfigure.cmake  TargetArch.cmake
core/include/strategr/: action.hpp  actioncenter.h  activity.h  activityinvalidpropertyexception.h  color.h  currenttimemarker.h  event.h  file_bookmark.h  geometry.h  mousehandler.h  mousehandleroperations.h  notifiableonchange.h  notifier.h  overview.h  persistent.h  privatelist.h  selection.h  session.h  stgstring.h  strategy.h  streamablelist.h  theme.h  time_utils.h  timeslot.h  timeslotsstate.h  utility.h
core/src/: actioncenter.cpp  activity.cpp  activityinvalidpropertyexception.cpp  activitylist.cpp  color.cpp  currenttimemarker.cpp  dragoperation.cpp  event.cpp  file_bookmark.cpp  json.cpp  json.h  mousehandler.cpp  notifications.cpp  notifier.cpp  overview.cpp  persistent.cpp  selection.cpp  session.cpp  stgstring.cpp  strategy.cpp  strategyhistory.cpp  theme.cpp  time_utils.cpp  timer.cpp  timeslot.cpp  timeslotsstate.cpp  version.cpp  version.cpp.in
core/src/apple/: STGCalendarExportViewModel.m  STGCalendarExporter.mm  STGCalendarImportViewModel.m  STGCalendarImporter.mm  STGCalendarManager.m  file_bookmark.mm  stgstring.mm
core/tests/: json_tests.cpp  notifier_immeadiate_test.cpp  notifier_scheduled_test.cpp  persistent_test.cpp  strategy_activities_slots_interaction_test.cpp  strategy_history_test.cpp  strategy_settings_test.cpp  strategy_timeslots_test.cpp  test.stg  test_wrong_activity_index.stg  tests_main.cpp  time_utils_test.cpp
desktop/: CMakeLists.txt  CMakePresets.json
desktop/cmake/modules/: ConfigureDesktop.cmake  Deployment.cmake  FindSparkle.cmake  FindWinSparkle.cmake  GetMSVCRedist.cmake
desktop/deployment/: Info.plist  Strategr.entitlements  Strategr.icns  Strategr.in.iss  Strategr.rc  Strategr_x64.iss  Strategr_x86.iss  Strategr_x86.template.iss  Strategy.icns  macos_deploy.sh  macos_notarize.sh  macos_package.sh
desktop/resources/: fonts.qrc
desktop/src/: aboutwindow.cpp  abstractspinboxdecorator.cpp  abstractspinboxdecorator.h  activityeditormenu.cpp  activityeditormenu.h  activitylistwidget.cpp  activitywidget.cpp  activitywidget.h  alert.cpp  alert.h  application.cpp  application.h  application.mm  applicationicon.h  applicationicon.mm  applicationmenu.cpp  applicationmenu.h  applicationsettings.h  backends.h  coloredlabel.cpp  coloredlabel.h  colorpicker.cpp  colorpicker.h  colorprovider.cpp  colorprovider.mm  colorutils.h  currentsessionwidget.cpp  currentsessionwidget.h  currenttimemarkerwidget.cpp  cursorprovider.cpp  cursorprovider.h  dataproviderwidget.cpp  dataproviderwidget.h  drawingutils.h  filesystemiomanager.cpp  filesystemiomanager.h  fontutils.cpp  fontutils.h  iconwidget.cpp  iconwidget.h  (+39 more)
desktop/src/cocoa/: STGCalendarExportProgressWindow.h  STGCalendarExportProgressWindow.m  STGCalendarExportView.h  STGCalendarExportView.m  STGCalendarExportViewController.h  STGProgressWindow.h  (+7 more)
desktop/tests/: main_window_test.cpp  qt_tests_main.cpp
models/: Activity.cpp  Activity.h  ActivityInvalidPropertyException.cpp  ActivityInvalidPropertyException.h  ActivityList.cpp  ActivityList.h  CMakeLists.txt  CurrentTimeMarker.cpp  CurrentTimeMarker.h  DragOperation.cpp  DragOperation.h  JSON.cpp  JSON.h  NotifiableOnChange.h  Notifier.cpp  Notifier.h  Overview.cpp  Overview.h  PrivateList.hpp  Rect.hpp  ResizeOperation.cpp  ResizeOperation.h  Session.cpp  Session.h  SessionsCalculator.cpp  SessionsCalculator.h  SessionsList.cpp  SessionsList.h  Strategy.cpp  Strategy.h  StrategyHistory.cpp  StrategyHistory.h  StreamableList.h  TimeSlot.cpp  TimeSlot.h  TimeSlotsState.cpp  TimeSlotsState.h  TimeUtils.cpp  TimeUtils.h  Timer.cpp  (+76 more)
models/apple/: NSColor+HexColor.h  NSColor+HexColor.m  NSColor+HexString.h  NSColor+HexString.m  SGCalendarExporter.h  SGCalendarExporter.mm  SGCalendarImportViewModel.h  SGCalendarImportViewModel.m  SGCalendarImporter.h  SGCalendarImporter.mm  SGCalendarManager.h  SGCalendarManager.m
models/tests/: activity_tests.cpp  json_tests.cpp  strategy_activities_slots_interaction_test.cpp  strategy_activities_test.cpp  strategy_history_test.cpp  strategy_settings_test.cpp  strategy_timeslots_test.cpp
(+261 files in other folders)
